<resources>
    <string name="app_name">apartmentManage</string>
    <string name="title_sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_continue">continue</string>
    <string name="title_happiness_home">Happiness Home</string>
    <string name="catalogs">Catalogs</string>
    <string name="add">Add</string>
    <string name="apartment">Apartment</string>
    <string name="contract">Contract</string>
    <string name="family">Family</string>
    <string name="business">Business</string>
    <string name="utility">Utility</string>
    <string name="name_apartment">Name apartment</string>
    <string name="cost">Cost</string>
    <string name="note">Note</string>
    <string name="region_id">ID region</string>
    <string name="family_id">ID family</string>
    <string name="kind_apartment">Kind apartment</string>
    <string name="states">states</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="apartment_id">ID Apartment</string>
    <string name="Rent">Rent</string>
    <string name="Buy">Buy</string>
    <string name="contract_id">ID contract</string>
    <string name="contract_name">Name contract</string>
    <string name="contract_kind">Kind contract</string>
    <string name="employee_id">ID employee</string>
    <string name="save">Save</string>
    <string name="sum_cost_n_vat_20">Sum Cost\n VAT 20%</string>
    <string name="could_not_find_your_account">Couldn\'t find your account</string>
    <string name="wrong_password_try_again">Wrong password, try again</string>
    <string name="enter_username">Enter a username</string>
    <string name="enter_password">Enter a password</string>
    <string name="enter_combination_of_at_least_five_numbers_and_letters">Enter a combination of at least five numbers and letters</string>
</resources>
