<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.contract.dialog.CRUContractActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/previousButton"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/background_previous" />

            <TextView
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:text="@string/save"
                android:textSize="@dimen/sp_20" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/contract_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contractIDEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:hint="@string/contract_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contractNameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:hint="@string/contract_kind">

        <AutoCompleteTextView
            android:id="@+id/contractKindDropDown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:paddingLeft="@dimen/dp_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:hint="@string/employee_id">

        <AutoCompleteTextView
            android:id="@+id/employeeIDDropDown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="@dimen/dp_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:hint="@string/apartment_id">

        <AutoCompleteTextView
            android:id="@+id/apartmentIDDropDown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="@dimen/dp_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:hint="@string/family_id">

        <AutoCompleteTextView
            android:id="@+id/familyIDDropDown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="@dimen/dp_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sum_cost_n_vat_20"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/sumCostTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

</LinearLayout>
