<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_250">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:hint="@string/username"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidth="@dimen/dp_2"
            app:hintTextColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameTextInputLayout"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_40"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidth="@dimen/dp_2"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_50"
            android:layout_below="@+id/passwordTextInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_45"
            android:gravity="center"
            android:text="@string/title_continue"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_14"
            app:backgroundTint="#0046454C"
            app:cornerRadius="@dimen/dp_10"
            app:hintTextColor="@color/colorWhite"
            app:strokeColor="@color/colorWhite" />

    </RelativeLayout>

</FrameLayout>
